--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 BzrTools==2.6.0
 Flask==0.12
+Flask-Migrate==2.0.3
+Flask-SQLAlchemy==2.1
+Flask-Script==2.0.5
 Jinja2==2.9.5
+Mako==1.0.6
 MarkupSafe==0.23
 Pillow==2.3.0
+SQLAlchemy==1.1.5
 SecretStorage==2.0.0
 Werkzeug==0.11.15
+alembic==0.8.10
 argparse==1.2.1
 bzr==2.7.0dev1
 chardet==2.0.1
@@ -30,12 +36,15 @@ numpy==1.8.2
 oauth==1.0.1
 paramiko==1.10.1
 pexpect==3.1
+psycopg2==2.6.2
 pycrypto==2.6.1
 pygobject==3.12.0
 pygpgme==0.3
 pyparsing==2.0.1
 python-apt==0.9.3.5ubuntu2
 python-dateutil==1.5
+python-dotenv==0.6.3
+python-editor==1.0.3
 pytz==2012c
 requests==2.2.1
 scipy==0.13.3
